# BirdAtlasOfFrance

./: .env.template  .gitignore  Makefile  README.md  README.rst  docker-compose.override.dev.yaml  docker-compose.override.prod.yaml  docker-compose.override.prod.yml  docker-compose.yml  package-lock.json  run_dev  run_dev.sh
.github/workflows/: codeql-analysis.yml
backend/: .dockerignore  .env.template  .flake8  .python-version  Dockerfile  README.md  isort.cfg  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  db.py
backend/app/core/actions/: crud.py
backend/app/core/commons/: models.py  schemas.py
backend/app/core/general/: actions.py  models.py  routers.py  schemas.py
backend/app/core/gn_synthese/: models.py
backend/app/core/prospecting/: actions.py  models.py  routers.py  schemas.py
backend/app/core/ref_geo/: actions.py  models.py  routers.py  schemas.py
backend/app/core/search/: actions.py  models.py  routers.py  schemas.py
backend/app/core/taxa/: actions.py  models.py  routers.py  schemas.py
backend/app/utils/: config.py  db.py  log.py
backend/tests/: test_app.py
data/core/ref_geo/: README.md  grids.txt  insert_ade_express.sql  insert_grids.sh  insert_grids.sql
data/import_archive_data/: aofm_2009-2012.sql  aofm_data_to_extended_synthese.sql  historic_atlases.sql
data/import_archive_data/aofm_2009-2012/: aofm_2009-2012.sql  aofm_data_to_extended_synthese.sql  init.sql  init.tmp
data/sql_scripts/: 000_init.sql  001_data_for_atlas.sql  002_area_knowledge_level.sql  003_area_knowledge_list_taxa.sql  004_general_stats.sql  005_area_dashboard.sql  006_epoc.sql  009_map_categories.sql  00X_specie_profiles.sql  00_init.sql  010_taxa_datas.sql  011_survey_data.sql  01_data_for_atlas.sql  02_area_knowledge_level.sql  03_area_knowledge_list_taxa.sql  04_general_stats.sql  05_area_dashboard.sql  06_epoc.sql  07_search.sql  08_refresh.sql  099_first_refresh_materialized_views.sql  09_map_categories.sql  100_refresh.sql  _template.sql  area_knowledge_level.sql  area_knowledge_list_taxa.sql  areas.sql  atlas.sql  init_db.sh  search.sql  taxonomie_update.sql  tmp_ntiles.sql
data/sql_scripts/extra/: aofm_data_to_extended_synthese.sql  areas.sql  areas_4_web.sql  custom_pdf_db_config.sql  migration_data.sql  natureocentre.sql
docs/: mkdocs.yml
docs/docs/: data.md  index.md  specie_list.md
frontend/: .dockerignore  .env.template  .eslintrc.js  .gitignore  .prettierignore  Dockerfile  Dockerfile.dev  jsconfig.json  nuxt.config.js  package-lock.json  package.json  stylelint.config.js
frontend/.github/workflows/: ci.yml
frontend/assets/: style.css
frontend/components/: AreaSearchBar.vue  ClickableTerritory.vue  FeatureDashboard.vue  HomeNavBar.vue  InformativeHeader.vue  LegendContent.vue  ProspectingMap.vue  ProspectingMapOld.vue  Seasons.vue  SeasonsSelect.vue  SpeciesSearchBar.vue
frontend/components/Home/: KeyDataSection.vue  SearchBar.vue  SearchSection.vue
frontend/components/Layouts/: HomeNavBar.vue  StandardNavBar.vue  TransparentNavBar.vue
frontend/components/about/: CaptchaForm.vue  ContactFormConfirmation.vue  ContactFormDropdownList.vue  ContactFormSelect.vue  ContactSelect.vue  README.md
frontend/components/commons/: README.md  SearchBar.vue
frontend/components/get-involved/: ProtocolsCards.vue  README.md
frontend/components/global/: ChartLegend.vue  DropdownList.vue  InformativeHeader.vue  InformativePage.vue  PartnersLogos.vue  RangeSlider.vue  SwitchButton.vue
frontend/components/home/: KeyDataSection.vue  NewsSection.vue  README.md  SearchBar.vue  SearchSection.vue
frontend/components/layouts/: Breadcrumb.vue  Footer.vue  MobileMenu.vue  README.md  StandardNavBar.vue  TransparentNavBar.vue
frontend/components/news/: NewsCard.vue  README.md
frontend/components/prospecting/: CountTaxaControl.vue  EpocDashboardControl.vue  FeatureDashboardControl.vue  KnowledgeLevelControl.vue  LayersSelector.vue  MapSearchBar.vue  ProspectingMap.vue  README.md  SeasonsSelector.vue  (+2 more)
frontend/directives/: lazyLoadDirective.js
frontend/layouts/: default.vue
frontend/pages/: index.vue  inspire.vue  mobile.vue  news.vue  old-index.vue
frontend/plugins/: animateScrollTo.js  checkEmail.js  debounce.js  departmentsList.js  detectMobile.js  directives.js  formatDate.js  generateCaptcha.js  getLatestDate.js  getPageTitle.js  redLists.js  thousandDelimiter.js  toPercent.js  vueLeaflet.js
frontend/store/: species.js
frontend/test/: fakeData.js
maintenance_page/: odf.html
trashpad/: test.sql
trashpad/geojson_test/: prospecting_api_test.html
(+251 files in other folders)
