[tool.poetry]
name = "app"
version = "1.0.1-dev"
description = ""
authors = ["lpofredc <frederic.cloitre@lpo.fr>"]

[tool.poetry.scripts]
odf_api = "app.main:main"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.86.0"
pydantic = "^1.10.2"
psycopg2-binary = "^2.9.5"
databases = {extras = ["postgresql"], version = "^0.4.1"}
uvicorn = "^0.19.0"
python-dotenv = "^0.21.0"
coloredlogs = "^15.0.1"
loguru = "^0.6.0"
geojson-pydantic = "^0.4.3"
sentry-sdk = "^1.10.1"
sqlalchemy = "^1.4.43"
geoalchemy2 = "^0.12.5"

[tool.poetry.group.dev.dependencies]
mypy = "^0.990"
pytest = "^7.2.0"
sqlalchemy-stubs = "^0.4"
flake8 = "^5.0.4"
autoflake = "^1.7.7"
isort = "^5.10.1"
black = "^22.10.0"
tox = "^3.27.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py37

[testenv]
deps = pytest >= 3.0.0, <4
commands = pytest
"""
