[tool.poetry]
name = "app"
version = "1.0.1-dev"
description = ""
authors = ["lpofredc <frederic.cloitre@lpo.fr>"]

[tool.poetry.scripts]
odf_api = "app.main:main"

[tool.poetry.dependencies]
python=">=3.8.1,<4.0"
fastapi = "^0.86.0"
pydantic = "^1.10.2"
psycopg2-binary = "^2.9.5"
databases = {extras = ["postgresql"], version = "^0.4.1"}
uvicorn = "^0.19.0"
python-dotenv = "^0.21.0"
coloredlogs = "^15.0.1"
loguru = "^0.6.0"
geojson-pydantic = "^0.4.3"
sentry-sdk = "^1.10.1"
sqlalchemy = "^1.4.43"
geoalchemy2 = "^0.12.5"
websockets = "^10.4"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}

[tool.poetry.group.dev.dependencies]
mypy = "1.0.0"
pytest = "^7.2.1"
sqlalchemy-stubs = "^0.4"
flake8 = "^6.0.0"
autoflake = "^2.0.1"
isort = "^5.10.1"
black = "^23.1.0"
tox = "^4.4.5"
pylint = "^2.16.2"


[tool.isort]
include_trailing_comma = true
line_length = 99
multi_line_output = 3
profile = "black"

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
include = '\.pyi?$'
line-length = 99
target-version = ['py38']

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 99
disable = """
"""
good-names = [
    "db",
]

[tool.mypy]
ignore_missing_imports = true


[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py38

[testenv]
deps = pytest >= 3.8.1, <4
commands = pytest
"""


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
