[tool.poetry]
name = "app"
version = "1.0.1-dev"
description = ""
authors = ["lpofredc <frederic.cloitre@lpo.fr>"]

[tool.poetry.scripts]
backend = "app.main:main"

[tool.poetry.dependencies]
python=">=3.8.1,<4.0"
fastapi = "^0.110.1"
pydantic = "^2.6.4"
psycopg2-binary = "^2.9.9"
databases = {version = "^0.8", extras = ["postgresql]"]}
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
coloredlogs = "^15.0.1"
loguru = "^0.7.2"
geojson-pydantic = "^1.0.2"
sentry-sdk = "^1.44.1"
sqlalchemy = "^1"
geoalchemy2 = "^0.14.7"
websockets = "^12.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pytest = "^8.1.1"
sqlalchemy-stubs = "^0.4"
flake8 = "^7.0.0"
autoflake = "^2.3.1"
isort = "^5.13.2"
black = "^24.3.0"
tox = "^4.14.2"
pylint = "^3.1.0"


[tool.isort]
include_trailing_comma = true
line_length = 99
multi_line_output = 3
profile = "black"

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
include = '\.pyi?$'
line-length = 99
target-version = ['py38']

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 99
disable = """
"""
good-names = [
    "db",
]

[tool.mypy]
ignore_missing_imports = true


[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py38

[testenv]
deps = pytest >= 3.8.1, <4
commands = pytest
"""


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
